# UR5-based-Tossbot

./: Dkin_UR5Tcp.m  README.md  UR5__symkin_o_Tool.m  manipulability_ellipsoid.mlx  simple parabolic throw vs. parabolic throw with non-linear air resistance.mlx  underhand throw script.mlx
Bessler camera calibration/: main.cpp
Object Detection (OpenCV)/final_cpp_code/build-src-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Object Detection (OpenCV)/final_cpp_code/build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-7202f8d4913af6711396.json  cmakeFiles-v1-89f31c75aa841e477bdf.json  codemodel-v2-7f64877629f10d56ea26.json  index-2023-11-23T09-19-11-0982.json  target-main-Debug-e60822fe402284c8f0a2.json
Object Detection (OpenCV)/final_cpp_code/src/: CMakeLists.txt  CMakeLists.txt.user.06bf4c1  client.cpp  client.h  main.cpp  server.cpp  server.h  wsg.cpp  wsg.h
